--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1401,7 +1401,10 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
 @article{Martin:1997ns,
       author         = "Martin, Stephen P.",
       title          = "{A Supersymmetry primer}",
-      year           = "1997",
+      journal        = "Adv.Ser.Direct.High Energy Phys.",
+      volume         = "21",
+      pages          = "1-153",
+      year           = "2010",
       eprint         = "hep-ph/9709356",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
