--- a/Theory.tex
+++ b/Theory.tex
@@ -94,6 +94,38 @@ Besides the two advantages discussed above, R-parity conserving SUSY models also
 \subsection{The MSSM}
 \label{subsec:mssm}
 
+\begin{table}[htbp] 
+  \centering
+  \label{tab:mssm_particles}
+%   \makebox[\linewidth]{
+    \begin{tabular}{cccc}
+%      \hline
+      \toprule
+      Type & Spin & Gauge eigenstates & Mass eigenstates \\
+      \midrule
+      \midrule
+      Higgs bosons & 0 & $H_{u}^{0}$ $H_{d}^{0}$ $H_{u}^{+}$ $H_{u}^{-}$ & $h^{0}$ $H^{0}$ $A^{0}$ $H^{\pm}$  \\
+      \midrule
+      & & $\tilde{u}_{L}$ $\tilde{u}_{R}$ $\tilde{d}_{L}$ $\tilde{d}_{R}$ &  see left \\
+      Squarks & 0 & $\tilde{s}_{L}$ $\tilde{s}_{R}$ $\tilde{c}_{L}$ $\tilde{c}_{R}$  & see left \\
+      & & $\tilde{t}_{L}$ $\tilde{t}_{R}$ $\tilde{b}_{L}$ $\tilde{b}_{R}$ & $\tilde{t}_{1}$ $\tilde{t}_{2}$ $\tilde{b}_{1}$ $\tilde{b}_{2}$ \\
+      \midrule
+      & & $\tilde{e}_{L}$ $\tilde{e}_{R}$ $\tilde{\nu}_{e}$ &  see left \\
+      Sleptons  & 0 & $\tilde{\mu}_{L}$ $\tilde{\mu}_{R}$ $\tilde{\nu}_{\mu}$ & see left \\
+      & & $\tilde{\tau}_{L}$ $\tilde{\tau}_{R}$ $\tilde{\nu}_{\tau}$ & $\tilde{\tau_{1}}$ $\tilde{\tau_{2}}$ $\tilde{\nu_{\tau}}$ \\
+      \midrule
+      Neutralinos  & 1/2 & $\tilde{B}^{0}$ $\tilde{W}^{0}$ $\tilde{H}_{u}^{0}$ $\tilde{H}_{d}^{0}$ & $\tilde{\chi}_{1}^{0}$ $\tilde{\chi}_{2}^{0}$ $\tilde{\chi}_{3}^{0}$ $\tilde{\chi}_{4}^{0}$ \\
+      \midrule
+      Charginos & 1/2 & $\tilde{W}^{\pm}$ $\tilde{H}_{u}^{+}$ $\tilde{H}_{d}^{-}$ & $\tilde{\chi}_{1}^{\pm}$ $\tilde{\chi}_{2}^{\pm}$ \\
+      \midrule
+      Gluino & 1/2 & $\tilde{g}$ & see left \\
+      \midrule
+      Gravitino & 3/2 & $\tilde{G}$ & see left \\
+      \bottomrule
+    \end{tabular}%}
+ \caption{Supersymmetric particles contained in the MSSM neglecting mixing in the first two sfermion generations. Following~\cite{Martin:1997ns}.} 
+\end{table}
+
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
 
