--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2817,6 +2817,24 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
   year = {2011}
 }
 
+@misc{bib:lhc:lumi12,
+  author = "{CMS Collaboration}",
+  title = {Luminosity Information for the 2012 Proton Run},
+  note = "\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/LumiPublicResults}",
+  year = {2012}
+}
+
+@article{Lamont:2013cma,
+      author         = "Lamont, Mike",
+      title          = "{Status of the LHC}",
+      journal        = "J.Phys.Conf.Ser.",
+      volume         = "455",
+      pages          = "012001",
+      doi            = "10.1088/1742-6596/455/1/012001",
+      year           = "2013",
+      SLACcitation   = "%%CITATION = 00462,455,012001;%%",
+}
+
 @techreport{Bailey:691782,
       author       = "Bailey, R and Collier, Paul",
       title        = "Standard Filling Schemes for Various LHC Operation Modes",
@@ -3418,7 +3436,8 @@ author = {R.L. Gl\"uckstern}
 
 @misc{bib:lhcmachineoutreach,
   title = {LHC machine outreach},
-  note = "\url{http://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/}"
+  note = "\url{http://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/}",
+  year = "2013"
 }
 
 
