--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3454,6 +3454,36 @@ author = {R.L. Gl\"uckstern}
   doi = {10.2307/2280232}
 }
 
+@article{Seymour:2013ega,
+      author         = "Seymour, Michael H. and Marx, Marilyn",
+      title          = "{Monte Carlo Event Generators}",
+      year           = "2013",
+      eprint         = "1304.6677",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MCNET-13-05",
+      SLACcitation   = "%%CITATION = ARXIV:1304.6677;%%",
+}
+
+@article{Buckley:2011ms,
+      author         = "Buckley, Andy and Butterworth, Jonathan and Gieseke,
+                        Stefan and Grellscheid, David and Hoche, Stefan and
+                        others",
+      title          = "{General-purpose event generators for LHC physics}",
+      journal        = "Phys.Rept.",
+      volume         = "504",
+      pages          = "145-233",
+      doi            = "10.1016/j.physrep.2011.03.005",
+      year           = "2011",
+      eprint         = "1101.2599",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-10-21, CERN-PH-TH-2010-298, DCPT-10-202,
+                        HD-THEP-10-24, IPPP-10-101, KA-TP-40-2010, LU-TP-10-28,
+                        MAN-HEP-2010-23, MCNET-11-01, SLAC-PUB-14333",
+      SLACcitation   = "%%CITATION = ARXIV:1101.2599;%%",
+}
+
 @Article{bib:alwall:madgraph,
      author    = "Alwall, Johan and others",
      title     = "{MadGraph/MadEvent v4: The New Web Generation}",
