--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2175,6 +2175,21 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       SLACcitation   = "%%CITATION = ARNUA,37,383;%%",
 }
 
+@article{Collins:1989gx,
+      author         = "Collins, John C. and Soper, Davison E. and Sterman,
+                        George F.",
+      title          = "{Factorization of Hard Processes in QCD}",
+      journal        = "Adv.Ser.Direct.High Energy Phys.",
+      volume         = "5",
+      pages          = "1-91",
+      year           = "1988",
+      eprint         = "hep-ph/0409313",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ITP-SB-89-31",
+      SLACcitation   = "%%CITATION = HEP-PH/0409313;%%",
+}
+
 @Article{Gribov:1972ri,
      author    = "Gribov, V. N. and Lipatov, L. N.",
      title     = "{Deep inelastic $ep$ scattering in perturbation theory}",
