--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3499,6 +3499,48 @@ author = {R.L. Gl\"uckstern}
       SLACcitation   = "%%CITATION = ARXIV:1101.2599;%%",
 }
 
+@article{Andersson198331,
+title = "Parton fragmentation and string dynamics ",
+journal = "Physics Reports ",
+volume = "97",
+number = "2 - 3",
+pages = "31 - 145",
+year = "1983",
+note = "",
+issn = "0370-1573",
+doi = "http://dx.doi.org/10.1016/0370-1573(83)90080-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370157383900807",
+author = "B. Andersson and G. Gustafson and G. Ingelman and T. Sjöstrand"
+}
+
+@article{Amati197987,
+title = "Preconfinement as a property of perturbative QCD",
+journal = "Physics Letters B ",
+volume = "83",
+number = "1",
+pages = "87 - 92",
+year = "1979",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/0370-2693(79)90896-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370269379908967",
+author = "D. Amati and G. Veneziano"
+}
+
+@article{Bassetto1979207,
+title = "Color singlet distributions and mass damping in perturbative QCD",
+journal = "Physics Letters B ",
+volume = "83",
+number = "2",
+pages = "207 - 212",
+year = "1979",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/0370-2693(79)90687-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370269379906877",
+author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
+}
+
 @Article{bib:alwall:madgraph,
      author    = "Alwall, Johan and others",
      title     = "{MadGraph/MadEvent v4: The New Web Generation}",
