--- a/Detector.tex
+++ b/Detector.tex
@@ -208,7 +208,7 @@ Here, $f(x, \mu_{F})$ are the PDFs of the interacting protons which depend on th
 \item \textbf{Parton shower:} After the production in the hard interaction the outgoing partons start to form a shower, \ie cascades of further partons emerge. Typically, this happens with descending amounts of momentum transfer from the high scales down to low scales around 1\gev. This evolution is typically described by a probabilistic shower algorithm. In addition to a parton shower related to the outgoing partons which is referred to as \textit{final-state radiation} (FSR), partons can already radiate off other partons before the actual hard process takes place. This effect is known as \textit{initial-state radiation} and can be described by similar principles as FSR. However, in the case of ISR it is inevitable to consider that not all partons from the ISR shower necessarily take part in any hard process and thus have to be related to the proton remnant.  
  \item \textbf{Hadronization:} The evolution of the parton shower continues until low scales in momentum transfer are reached and so the final state partons eventually start to form colour neutral hadrons. In the context of simulation the term \textit{hadronization} describes the particular model which is used in order to specify the transition from the partonic state to the complete hadronic final state. Since the hadronization involves low-energetic processes it can not be treated within perturbation theory. In principle one distinguishes between \textit{string models} (\cf e.g.~\cite{Andersson198331}) and \textit{cluster models} (\cf e.g.~\cite{Amati197987, Bassetto1979207}) in order to characterize the hadronization. While the first model describes directly the transition from the parton to the hadron based on the assumption of linear confinement, the second model introduces an intermediate step of cluster objects with mass scales around a few \gev.  
  \item \textbf{Decay:} After the hadronization process a couple of unstable hadrons are present in the event whose decay into stable particles must be modelled. Stable in this context means that they do not decay further within the typical collider timescales. Thus, the observable final-state hadrons result from a convolution of the hadronization process with the decay modelling. Concerning the decay process a choice has to be made regarding the hadrons which shall be included in the simulation and the respective decay modes which have to be considered. Mainly, theses choices are based on experimental results in combination with theoretical assumptions. Typical differences occur e.g. in the consideration of excited mesons or heavy baryon multiplets as well as an appropiate treatment of matrix elements and spin correlations during the decay. 
- \item \textbf{Underlying event:} In addition to hadrons emerging from the process connected directly to the hard interaction, further contributions to the event can be presented reffered to as \textit{underlying event} (UE). The UE activity can be e.g. caused by additional interactions occuring for incoming partons, which is known as \textit{multiple parton interaction} (MPI), or by interactions arising from the proton remnants. In general, such effects contribute to the total amount of scattered energy and increase the number of particles appearing in the hadronization process. 
+ \item \textbf{Underlying event:} In addition to hadrons emerging from the process connected directly to the hard interaction, further contributions to the event can be present which is reffered to as \textit{underlying event} (UE). The UE activity can be e.g. caused by additional interactions occuring for incoming partons, which is known as \textit{multiple parton interaction} (MPI), or by interactions arising from the proton remnants. In general, such effects contribute to the total amount of scattered energy and increase the number of particles appearing in the hadronization process. 
 \end{description}
 The various sub-processes described above are the basis of various event generators which differ in some aspects concerning the treatment of individual sub-processes in the event simulation. Some of such generators, which are used in this thesis, are the following:   
 \begin{description}
